<resources>
    <string name="app_name">Projeto Aula 2</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="alterar">Alterar</string>
    <string name="cancelar">Cancelar</string>
    <string name="entrar">Entrar</string>
    <string name="nome">Nome</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="cpf">CPF</string>
    <string name="tarefa">Tarefa</string>
    <string name="lista_de_tarefas">Lista de tarefas</string>
    <string name="excluir">Excluir</string>
    <string name="distracao">Distração</string>
    <string name="mapa">Mapa</string>
    <string name="my_app">MYAPP</string>

    <string name="titulo_nova_conta">Nova Conta</string>
    <string name="titulo_resumo_cadastro">Resumo Cadastro</string>
    <string name="titulo_login">Login</string>
    <string name="titulo_resumo_login">Resumo Login</string>
    <string name="titulo_todo">Lista de Tarefas</string>
    <string name="titulo_distracao">Notícias</string>
    <string name="titulo_fomulario_todo_nova_tarefa">Nova Tarefa</string>
    <string name="titulo_fomulario_todo_alterar_tarefa">Alterar Tarefa</string>
    <string name="titulo_mapa">Mapa</string>

    <string name="msg_salvando">Salvando...</string>
    <string name="msg_efetuando_login">Efetuando Login...</string>
    <string name="msg_campo_obrigatorio">Campo obrigatório!</string>
    <string name="msg_email_invalido">Email inválido!</string>
    <string name="msg_minimo_de_caracteres">Mínimo de %d caracteres</string>
    <string name="msg_cpf_invalido">Cpf inválido!</string>
    <string name="msg_email_ja_cadastrado">E-mail já cadastrado!</string>
    <string name="msg_cpf_ja_cadastrado">Cpf já cadastrado!</string>
    <string name="msg_usuario_nao_cadastrado">Usuário não está cadastrado!</string>
    <string name="msg_senha_primeira_letra_maiscula">Senha deve começar com a primeira letra maiúscula!</string>
    <string name="msg_senha_invalida">Senha inválida!</string>
    <string name="msg_tarefa_ja_cadastrada">Já exite uma tarefa com essa descrição</string>
    <string name="msg_nao_fique_de_fora_utilize_o_aplicativo">Não fique de fora utilize o aplicativo!</string>


    <string-array name="dias_semana">
        <item>Domingo</item>
        <item>Segunda</item>
        <item>Terça</item>
        <item>Quarta</item>
        <item>Quinta</item>
        <item>Sexta</item>
        <item>Sábado</item>
    </string-array>
    <string name="title_activity_mapa">Map</string>
    <string name="title_activity_maps">Map</string>
</resources>
